--- a/graphing.ipynb
+++ b/graphing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -22,204 +22,6 @@
       "/Users/jamesbuzaid/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:15: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
       "  from ipykernel import kernelapp as app\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{960: 1,\n",
-       " 2635: 1,\n",
-       " 3943: 1,\n",
-       " 887: -1,\n",
-       " 1172: 1,\n",
-       " 3338: -1,\n",
-       " 697: 1,\n",
-       " 445: 1,\n",
-       " 1112: 1,\n",
-       " 1539: 1,\n",
-       " 4143: 1,\n",
-       " 2050: 1,\n",
-       " 387: 1,\n",
-       " 3681: 1,\n",
-       " 3832: -1,\n",
-       " 3551: -1,\n",
-       " 2442: 1,\n",
-       " 1924: -1,\n",
-       " 3525: -1,\n",
-       " 2316: 1,\n",
-       " 3568: 1,\n",
-       " 4048: -1,\n",
-       " 1532: -1,\n",
-       " 1675: 1,\n",
-       " 2176: -1,\n",
-       " 2429: -1,\n",
-       " 1060: 1,\n",
-       " 280: 1,\n",
-       " 2786: -1,\n",
-       " 3138: -1,\n",
-       " 3676: -1,\n",
-       " 1305: -1,\n",
-       " 376: 1,\n",
-       " 775: -1,\n",
-       " 1036: 1,\n",
-       " 4113: 1,\n",
-       " 16: 1,\n",
-       " 1610: -1,\n",
-       " 326: 1,\n",
-       " 3950: 1,\n",
-       " 116: -1,\n",
-       " 1144: -1,\n",
-       " 250: 1,\n",
-       " 792: 1,\n",
-       " 3705: 1,\n",
-       " 1114: 1,\n",
-       " 1391: 1,\n",
-       " 34: 1,\n",
-       " 1023: -1,\n",
-       " 332: -1,\n",
-       " 3730: 1,\n",
-       " 1140: 1,\n",
-       " 571: 1,\n",
-       " 2112: 1,\n",
-       " 2388: 1,\n",
-       " 2577: 1,\n",
-       " 3337: -1,\n",
-       " 1600: 1,\n",
-       " 4154: 1,\n",
-       " 1557: -1,\n",
-       " 2926: 1,\n",
-       " 1162: 1,\n",
-       " 595: -1,\n",
-       " 796: 1,\n",
-       " 1090: 1,\n",
-       " 1460: 1,\n",
-       " 3594: -1,\n",
-       " 2731: -1,\n",
-       " 1171: 1,\n",
-       " 3880: 1,\n",
-       " 1535: 1,\n",
-       " 3419: 1,\n",
-       " 4203: -1,\n",
-       " 3034: 1,\n",
-       " 1369: -1,\n",
-       " 1159: -1,\n",
-       " 3882: 1,\n",
-       " 734: 1,\n",
-       " 1619: 1,\n",
-       " 1298: -1,\n",
-       " 3734: -1,\n",
-       " 3745: 1,\n",
-       " 3714: -1,\n",
-       " 672: -1,\n",
-       " 2645: -1,\n",
-       " 916: 1,\n",
-       " 1413: 1,\n",
-       " 2131: -1,\n",
-       " 3255: 1,\n",
-       " 4059: 1,\n",
-       " 4255: 1,\n",
-       " 721: -1,\n",
-       " 458: 1,\n",
-       " 2561: -1,\n",
-       " 383: 1,\n",
-       " 467: -1,\n",
-       " 2878: -1,\n",
-       " 2481: 1,\n",
-       " 3821: 1,\n",
-       " 21: 1,\n",
-       " 3840: -1,\n",
-       " 3463: 1,\n",
-       " 1914: 1,\n",
-       " 2297: -1,\n",
-       " 614: 1,\n",
-       " 2713: 1,\n",
-       " 3959: -1,\n",
-       " 1211: -1,\n",
-       " 2755: -1,\n",
-       " 3850: -1,\n",
-       " 3361: 1,\n",
-       " 2369: -1,\n",
-       " 1105: 1,\n",
-       " 22: -1,\n",
-       " 657: 1,\n",
-       " 3162: -1,\n",
-       " 2555: 1,\n",
-       " 4034: -1,\n",
-       " 2870: 1,\n",
-       " 3760: 1,\n",
-       " 114: 1,\n",
-       " 1237: 1,\n",
-       " 3932: 1,\n",
-       " 1998: -1,\n",
-       " 937: 1,\n",
-       " 3579: 1,\n",
-       " 2603: -1,\n",
-       " 1129: -1,\n",
-       " 1356: 1,\n",
-       " 968: 1,\n",
-       " 3706: -1,\n",
-       " 522: -1,\n",
-       " 1054: -1,\n",
-       " 4138: 1,\n",
-       " 2783: -1,\n",
-       " 37: 1,\n",
-       " 498: 1,\n",
-       " 2195: 1,\n",
-       " 639: 1,\n",
-       " 1510: -1,\n",
-       " 3967: 1,\n",
-       " 3319: 1,\n",
-       " 1434: -1,\n",
-       " 385: -1,\n",
-       " 4275: -1,\n",
-       " 99: 1,\n",
-       " 1591: -1,\n",
-       " 4006: 1,\n",
-       " 341: 1,\n",
-       " 1679: -1,\n",
-       " 2778: -1,\n",
-       " 2008: -1,\n",
-       " 3726: -1,\n",
-       " 1680: 1,\n",
-       " 2174: -1,\n",
-       " 3476: -1,\n",
-       " 4335: -1,\n",
-       " 578: 1,\n",
-       " 1816: 1,\n",
-       " 978: -1,\n",
-       " 456: -1,\n",
-       " 2353: 1,\n",
-       " 2581: -1,\n",
-       " 2317: -1,\n",
-       " 1489: -1,\n",
-       " 1160: 1,\n",
-       " 896: -1,\n",
-       " 45: 1,\n",
-       " 3892: -1,\n",
-       " 1517: 1,\n",
-       " 2980: -1,\n",
-       " 2882: -1,\n",
-       " 3490: 1,\n",
-       " 2664: 1,\n",
-       " 1153: -1,\n",
-       " 586: -1,\n",
-       " 304: -1,\n",
-       " 1392: 1,\n",
-       " 4369: -1,\n",
-       " 2136: -1,\n",
-       " 3985: -1,\n",
-       " 3538: -1,\n",
-       " 950: 1,\n",
-       " 107: 1,\n",
-       " 1044: 1,\n",
-       " 231: 1,\n",
-       " 3389: 1,\n",
-       " 4173: 1,\n",
-       " 2192: 1}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -241,7 +43,51 @@
     "        d[k] = v[0]\n",
     "    return d\n",
     "\n",
-    "parse_user_csv('users/user_' + user + '.csv')"
+    "curr_prefs = parse_user_csv('users/user_' + user + '.csv')\n",
+    "\n",
+    "data = pd.read_csv('data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "960     1\n",
+       "2635    1\n",
+       "3943    1\n",
+       "887    -1\n",
+       "1172    1\n",
+       "       ..\n",
+       "231     1\n",
+       "3389    1\n",
+       "4173    1\n",
+       "2192    1\n",
+       "1702    1\n",
+       "Length: 190, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "observed = data.loc[curr_prefs.keys()]\n",
+    "pd.Series(curr_prefs)\n",
+    "\n",
+    "for i in (1, 20, 40, 60, 80, 100):\n",
+    "    \n"
    ]
   },
   {
