graphing jupyer noteboook

--- a/graphing.ipynb
+++ b/graphing.ipynb
@@ -2,17 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cols_with_title_ingr(df):\n",
+    "    return [col for col in df.columns if '::' in col]\n",
+    "\n",
+    "\n",
+    "def cols_with_underscores(df):\n",
+    "    return [col for col in df.columns if col[0] == '_']\n",
+    "\n",
+    "\n",
+    "def cols_to_drop(df):\n",
+    "    return cols_with_underscores(df) + cols_with_title_ingr(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -50,44 +69,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def random_classify(train_y, test_y):\n",
+    "    # try to predict test_y randomly\n",
+    "    pct_pos = len(np.where(train_y > 0)) / len(train_y)\n",
+    "\n",
+    "    # how to calculate expected number of correct guesses\n",
+    "\n",
+    "    expected_correct = 0\n",
+    "    for y in test_y:\n",
+    "        if y == 1:\n",
+    "            expected_correct += pct_pos\n",
+    "        else:\n",
+    "            expected_correct += (1 - pct_pos)\n",
+    "\n",
+    "    return expected_correct / len(test_y)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(train_X, train_y):\n",
+    "    return classifier.fit(train_X, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observed = data.loc[curr_prefs.keys()]\n",
+    "ys = pd.Series(curr_prefs)\n",
+    "\n",
+    "observed = observed.drop(\n",
+    "    columns=cols_to_drop(observed)).drop(columns=['website'])\n",
+    "\n",
+    "\n",
+    "accuracy_measurements = {}\n",
+    "rand_accuracy = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in (1, 20, 40, 60, 80, 100):\n",
+    "    train_X = observed.iloc[:i].to_numpy()\n",
+    "    train_y = ys.iloc[:i].to_numpy()\n",
+    "\n",
+    "    test_X = observed.iloc[i:i+50].to_numpy()\n",
+    "    test_y = ys.iloc[i:i+50].to_numpy()\n",
+    "\n",
+    "    clf = train(train_X, train_y)\n",
+    "    actual_acc = clf.score(test_X, test_y)\n",
+    "    expected_random_acc = random_classify(train_y, test_y)\n",
+    "\n",
+    "    accuracy_measurements[i] = actual_acc\n",
+    "    rand_accuracy[i] = expected_random_acc\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "960     1\n",
-       "2635    1\n",
-       "3943    1\n",
-       "887    -1\n",
-       "1172    1\n",
-       "       ..\n",
-       "231     1\n",
-       "3389    1\n",
-       "4173    1\n",
-       "2192    1\n",
-       "1702    1\n",
-       "Length: 190, dtype: int64"
+       "{1: 0.6,\n",
+       " 20: 0.39200000000000024,\n",
+       " 40: 0.36700000000000005,\n",
+       " 60: 0.44199999999999995,\n",
+       " 80: 0.4414999999999999,\n",
+       " 100: 0.46080000000000004}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "observed = data.loc[curr_prefs.keys()]\n",
-    "pd.Series(curr_prefs)\n",
-    "\n",
-    "for i in (1, 20, 40, 60, 80, 100):\n",
-    "    \n"
+    "rand_accuracy"
    ]
   },
   {
